Program now reads GameList json from the github repository and loads the game list in the browse section.

--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,10 @@
             <version>3.6</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20250517</version>
+        </dependency>
     </dependencies>
 </project>
